fix collapse icon ui

--- a/src/app/styles/docs.scss
+++ b/src/app/styles/docs.scss
@@ -33,16 +33,18 @@
     }
 
     .menu-collapse {
+        background-color: var(--brand-color);
+        color: #fff !important;
+        width: 30px;
+        height: 30px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 6px 0 0 6px;
         cursor: pointer;
-        color: var(--font-color) !important;
-        opacity: 0.5;
-        font-size: 0.9rem !important;
-        line-height: 1;
-        padding: 0.25rem;
-
-        &:hover {
-            opacity: 1;
-        }
+        font-size: 1rem !important;
+        box-shadow: -2px 2px 8px var(--shadow-2);
+        margin-top: 0.5rem;
     }
 
     .docs-menu-item {
